--- a/app/blocks/bubble/bubble.scss
+++ b/app/blocks/bubble/bubble.scss
@@ -80,8 +80,17 @@
     #{$b} {
       &__angle {
         top: auto;
-        bottom: -6px;
+        bottom: -5px;
         fill: $color-basic;
+      }
+    }
+  }
+
+  &_down {
+    #{$b} {
+      &__angle {
+        top: auto;
+        bottom: -5px;
       }
     }
   }
@@ -115,5 +124,14 @@
 
   &_notification {
     padding: 0;
+  }
+
+  &_mob-notime {
+
+    #{$b} {
+      &__timestamp {
+        display: none;
+      }
+    }
   }
 }
