--- a/app/blocks/dialog/dialog.pug
+++ b/app/blocks/dialog/dialog.pug
@@ -48,10 +48,10 @@ mixin dialog3()
       +e.head_mg
         +e.TIME.date(datetime="2018-10-29") Few minutes ago
       +e.UL.list
-        +bubble('li', '15:45', "2018-10-27T15:45", true)._dark.__item I have ordered HOT DESK in your Building in East London. o the question is if i am able to have an access to your sports area when im ordering HOT DESK?
-        +bubble('li', '15:45', "2018-10-27T15:45", true)._dark.__item Hello. Well, let me think a little...
+        +bubble('li', '15:45', "2018-10-27T15:45", true)._dark._mob-notime.__item I have ordered HOT DESK in your Building in East London. o the question is if i am able to have an access to your sports area when im ordering HOT DESK?
+        +bubble('li', '15:45', "2018-10-27T15:45", true)._dark._mob-notime.__item Hello. Well, let me think a little...
       +e.UL.list
-        +bubble('li', '15:45', "2018-10-29T15:45")._notification.__item_wide
+        +bubble('li', '15:45', "2018-10-29T15:45")._notification._mob-notime.__item_wide
           +notification.is-new
             +notification-head('Action required:')
               +offer-info
