--- a/app/blocks/notification/notification.scss
+++ b/app/blocks/notification/notification.scss
@@ -12,7 +12,7 @@
   &__marker {
     position: absolute;
     right: -5px;
-    top: -5px;
+    top: 0;
     display: block;
     width: 10px;
     height: 10px;
@@ -22,7 +22,6 @@
     border-radius: 50%;
 
     @include screen('sm') {
-      top: -2px;
       right: -3px;
       width: 7px;
       height: 7px;
@@ -100,7 +99,7 @@
     @include screen('sm') {
       font-size: 21px;
       line-height: 1.2;
-      letter-spacing: -0.02em;
+      letter-spacing: -0.03em;
     }
 
     &:not(:first-child) {
