--- a/app/blocks/popups/popups.scss
+++ b/app/blocks/popups/popups.scss
@@ -31,6 +31,14 @@
       padding: 0;
     }
   }
+
+  &-container_shift {
+    transform: translate3d(100%, 0, 0);
+
+    &.fancybox-is-open {
+      transform: translate3d(0, 0, 0);
+    }
+  }
 }
 
 .popup {
