sys messages list 1

--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -142,6 +142,14 @@
     filter: drop-shadow(1px 1px 0 rgba(34, 42, 46, .2));
     transition: transform $ease-main;
 
+    &_download {
+
+      #{$b}_download-small & {
+        width: 15px;
+        height: 15px;
+      }
+    }
+
     #{$b}:hover &_download {
       transform: translate3d(0, -40%, 0);
     }
