--- a/app/blocks/long-arrow/long-arrow.scss
+++ b/app/blocks/long-arrow/long-arrow.scss
@@ -25,4 +25,29 @@
     line-height: 0;
     fill: currentColor;
   }
+
+  &_big {
+
+    #{$b} {
+
+      &__wrapper {
+        max-width: 72px;
+        height: 20px;
+
+        @include screen('sm') {
+          height: 11px;
+        }
+      }
+
+      &__icon {
+        height: 20px;
+        width: 207px;
+
+        @include screen('sm') {
+          width: 116px;
+          height: 11px;
+        }
+      }
+    }
+  }
 }
