--- a/app/blocks/popups/popups.scss
+++ b/app/blocks/popups/popups.scss
@@ -282,15 +282,15 @@
     box-sizing: border-box;
 
     @include screen('md') {
-      padding: 70px $container-padding-tablet;
+      padding: 70px $container-padding-tablet 100px;
     }
 
     @include screen('sm') {
-      padding: 50px $container-padding-mobile;
+      padding: 50px $container-padding-mobile 80px;
     }
 
     &_informer {
-      padding-top: 96px;
+      padding-top: 100px;
 
       @include screen('sm') {
         padding-top: 76px;
