--- a/app/blocks/notification/notification.pug
+++ b/app/blocks/notification/notification.pug
@@ -4,7 +4,9 @@ mixin notification()
     block
 
 mixin notification-head(name, title)
-  +e.SECTION.head&attributes(attributes)
+  - var addClass = '';
+  - if (title) {addClass = '_spd'}
+  +e.SECTION.head(class=addClass)&attributes(attributes)
     if name
       +e.name!= name
     if title
@@ -31,11 +33,22 @@ mixin notification-title()
 mixin notification-timer(name)
     +timer(name).__timer&attributes(attributes)
 
+mixin notification-timer2(name)
+    +timer-other(name).__timer&attributes(attributes)
+      block
+
 mixin notification-time(start, startISO, end, endISO)
-  +time(start, startISO, end, endISO).__time&attributes(attributes)
+  +time-big(start, startISO, end, endISO).__time&attributes(attributes)
+
+mixin notification-time-small(start, startISO, end, endISO, color)
+  +time(start, startISO, end, endISO, color)._sb.__time&attributes(attributes)
 
 mixin notification-buttons()
     +e.DIV.buttons&attributes(attributes)
       block
       //- +button()._border._border_bg-white._short.__button!=data.buttons[0].name
       //- +button()._short.__button!=data.buttons[1].name
+
+mixin notification-table()
+  +e.TABLE.table&attributes(attributes)
+    block
