--- a/app/blocks/notification/notification.scss
+++ b/app/blocks/notification/notification.scss
@@ -4,10 +4,24 @@
   position: relative;
   display: block;
   width: 100%;
-  background-color: $color-white;
-  color: $color-basic;
+  color: currentColor;
   box-sizing: border-box;
   max-width: 577px;
+
+  &_white {
+    background-color: $color-white;
+    color: $color-basic;
+  }
+
+  &_dark {
+    background-color: $color-hint-bg;
+    color: $color-white;
+  }
+
+  &_peach {
+    background-color: $color-peach;
+    color: $color-white;
+  }
 
   &__marker {
     position: absolute;
@@ -35,7 +49,6 @@
   &__head {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
     box-sizing: border-box;
     width: 100%;
     padding: 23px 23px 10px;
@@ -43,16 +56,76 @@
     @include screen('sm') {
       padding: 19px 15px 10px;
     }
+
+    &_spd {
+      padding-top: 19px;
+
+      @include screen('sm') {
+        padding-top: 17px;
+      }
+
+      #{$b}__target {
+        margin-top: 11px;
+
+        @include screen('sm') {
+          margin-top: 8px;
+        }
+      }
+    }
   }
 
   &__content {
     display: block;
     width: 100%;
     box-sizing: border-box;
-    padding: 14px 23px 26px;
+    padding: 18px 23px 26px;
 
     @include screen('sm') {
       padding: 11px 16px;
+    }
+
+    &_spd {
+      padding: 7px 23px 19px;
+
+      @include screen('sm') {
+        padding: 11px 16px;
+      }
+    }
+
+    &_spt {
+      padding-top: 9px;
+
+      @include screen('sm') {
+        padding-top: 11px;
+      }
+    }
+
+    &_otpd {
+      padding: 18px 23px 32px;
+
+      @include screen('sm') {
+        padding: 11px 16px;
+      }
+    }
+
+    &_ipd {
+      padding: 11px 23px 32px;
+
+      @include screen('sm') {
+        padding: 11px 16px;
+      }
+    }
+
+    &_txt {
+      padding: 23px 23px 17px;
+
+      @include screen('sm') {
+        padding: 11px 16px;
+      }
+    }
+
+    &_nobpd {
+      padding-bottom: 0;
     }
   }
 
@@ -65,6 +138,42 @@
 
     @include screen('sm') {
       padding: 16px 13px 22px;
+    }
+
+    &_noborder {
+      border-top: none;
+    }
+
+    &_txt {
+      padding: 22px 23px;
+
+      @include screen('sm') {
+        padding: 16px 13px 22px;
+      }
+    }
+
+    &_tbl {
+      padding: 32px 23px 40px;
+
+      @include screen('sm') {
+        padding: 20px 13px;
+      }
+    }
+
+    &_smpd {
+      padding: 15px 23px;
+
+      @include screen('sm') {
+        padding: 15px 13px;
+      }
+    }
+
+    &_st {
+      padding-top: 22px;
+
+      @include screen('sm') {
+        padding-top: 16px;
+      }
     }
   }
 
@@ -105,6 +214,28 @@
     &:not(:first-child) {
       margin-top: 22px;
     }
+
+    &_icon {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+    }
+  }
+
+  &__icon {
+    display: block;
+    font-size: 0;
+    line-height: 0;
+    fill: currentColor;
+    width: 40px;
+    height: 40px;
+    margin-right: 18px;
+
+    @include screen('sm') {
+      width: 20px;
+      height: 20px;
+      margin-right: 10px;
+    }
   }
 
   &__timer {
@@ -113,6 +244,27 @@
 
       @include screen('sm') {
         margin-top: 1px;
+      }
+    }
+  }
+
+  &__time {
+
+    &_mgt {
+      margin-top: 13px;
+
+      @include screen('sm') {
+        margin-top: 7px;
+      }
+    }
+
+    &_dark {
+
+      .time {
+
+        &__divider {
+          color: $color-basic;
+        }
       }
     }
   }
@@ -128,19 +280,172 @@
       flex-direction: column-reverse;
       flex-wrap: wrap;
     }
+
+    &_center {
+      justify-content: center;
+    }
   }
 
   &__button {
     flex: 1;
     margin-top: 11px;
+    max-width: 250px;
 
     @include screen('sm') {
       flex: none;
       width: 100%;
+      max-width: none;
     }
 
     &:not(:last-child) {
       margin-right: 28px;
+
+      @include screen('sm') {
+        margin-right: 0;
+      }
+    }
+
+    &_wide {
+      flex: none;
+      width: 100%;
+
+      &:not(:last-child) {
+        margin-right: 0;
+      }
+    }
+
+    &_short {
+      max-width: 180px;
+
+      @include screen('sm') {
+        max-width: none;
+      }
+    }
+
+    &_m212 {
+      min-width: 212px;
+
+      @include screen('sm') {
+        max-width: none;
+      }
+    }
+  }
+
+  &__link {
+    @include text-mid;
+
+    margin-top: 11px;
+    align-self: center;
+    white-space: nowrap;
+
+    @include screen('sm') {
+      @include text12;
+    }
+
+    &:not(:last-child) {
+      margin-right: 28px;
+
+      @include screen('sm') {
+        margin-right: 0;
+      }
+    }
+  }
+
+  &__table {
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+
+    &_mt {
+      margin-top: 4px;
+
+      @include screen('sm') {
+        margin-top: 0;
+      }
+    }
+  }
+
+  &__row {
+    border-top: 1px solid $color-gray-light-2;
+  }
+
+  &__cell {
+    box-sizing: border-box;
+    padding: 14px 23px 26px;
+    vertical-align: top;
+
+    @include screen('sm') {
+      padding: 10px 13px;
+    }
+
+    &:not(:last-child) {
+      border-right: 1px solid $color-gray-light-2;
+    }
+
+    &_w59 {
+      width: 59%;
+
+      @include screen('sm') {
+        width: 50%;
+      }
+    }
+
+    &_w41 {
+      width: 41%;
+
+      @include screen('sm') {
+        width: 50%;
+      }
+    }
+
+    &_w38 {
+      width: 38%;
+
+      @include screen('sm') {
+        width: 50%;
+      }
+    }
+
+    &_w62 {
+      width: 62%;
+
+      @include screen('sm') {
+        width: 50%;
+      }
+    }
+
+    &_ft {
+      padding: 12px 23px 40px;
+
+      @include screen('sm') {
+        padding: 15px 13px 22px;
+      }
+    }
+
+    &_btns {
+      padding: 31px 23px 40px;
+
+      @include screen('sm') {
+        padding: 26px 13px 22px;
+      }
+    }
+
+    &_no-pl {
+      padding-left: 0;
+    }
+
+    &_no-bl {
+      &:not(:last-child) {
+        border-right: none;
+      }
+    }
+  }
+
+  &__informer {
+    margin-top: -6px;
+
+    @include screen('sm') {
+      margin-top: 0;
     }
   }
 
@@ -156,9 +461,41 @@
 
       line-height: (20 / 13);
     }
+
+    &_big {
+      @include heading-4;
+
+      font-weight: 400;
+      line-height: 1;
+
+      @include screen('sm') {
+        @include text13;
+
+        line-height: (20 / 13);
+      }
+    }
+
+    b {
+      font-weight: 700;
+    }
+
+    &:not(:last-child) {
+      margin-bottom: 10px;
+    }
+
+    #{$b}__footer & {
+      &:not(:last-child) {
+        margin-bottom: 40px;
+
+        @include screen('sm') {
+          margin-bottom: 25px;
+        }
+      }
+    }
   }
 
   .offer-info {
+    white-space: nowrap;
 
     .box {
       @include screen('sm') {
@@ -170,6 +507,8 @@
     }
 
     &__title {
+      color: currentColor;
+
       @include screen('sm') {
         @include text-small;
 
