--- a/app/blocks/short-info/short-info.scss
+++ b/app/blocks/short-info/short-info.scss
@@ -1,3 +1,121 @@
 .short-info {
   $b: &;
+
+  display: block;
+  width: 100%;
+
+  &__name {
+    @include text16;
+
+    display: block;
+    font-weight: 400;
+    margin-bottom: 7px;
+
+    @include screen('sm') {
+      @include text12;
+
+      line-height: (20 / 12);
+      letter-spacing: -.02em;
+      margin-bottom: 4px;
+    }
+
+    #{$b}_mb15 & {
+      margin-bottom: 15px;
+
+      @include screen('sm') {
+        margin-bottom: 10px;
+      }
+    }
+  }
+
+  &__text {
+    @include heading-4;
+
+    font-weight: 400;
+    line-height: 1;
+
+    @include screen('sm') {
+      @include text12;
+
+      line-height: 1;
+    }
+
+    &_bold {
+      font-weight: 700;
+    }
+
+    &_red {
+      color: $color-peach;
+    }
+
+    &_green {
+      color: $color-confirm;
+    }
+
+    &_up {
+      text-transform: uppercase;
+    }
+  }
+
+  .state {
+    line-height: 1;
+  }
+
+  .state_right {
+    padding-right: 26px;
+
+    @include screen('sm') {
+      padding-right: 20px;
+    }
+
+    &.state_dcheck {
+      padding-right: 37px;
+
+      @include screen('sm') {
+        padding-right: 30px;
+      }
+    }
+  }
+
+  &_taright {
+
+    #{$b} {
+
+      &__name {
+        text-align: right;
+      }
+
+      &__content {
+        text-align: right;
+      }
+    }
+  }
+
+  &_line {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+
+    #{$b} {
+
+      &__name {
+        display: inline-block;
+        margin-right: 50px;
+        margin-bottom: 0;
+
+        @include screen('sm') {
+          margin-right: 20px;
+        }
+      }
+
+      &__content {
+        display: inline-block;
+      }
+    }
+
+    &_bordered {
+      padding-bottom: 1px;
+      border-bottom: 1px solid $color-gray-light-2;
+    }
+  }
 }
